ecommerce design user credentials

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:hint="@string/usuario"
+        android:maxLines="1"
+        android:maxLength="30"
         android:inputType="textEmailAddress"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:hint="@string/password"
+        android:maxLines="1"
+        android:maxLength="10"
         android:inputType="textPassword"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
