Working with Fragments 15/06/2023

--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -39,6 +39,7 @@
             android:textSize="14sp" />
 
         <Button
+            android:id="@+id/buttonItem"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Detalle"
